--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,14 @@
-version: '3'
 services:
-  app1:
-    image: loow/app:latest
-    expose:
-      - "5000"
 
-  app2:
-    image: loow/app2:latest
-    expose:
-      - "5000"
-
-  app3:
-    image: loow/app3:latest
-    expose:
-      - "5000"
-
-  nginx:
-    image: loow/nginx:latest
+  jenkins:
+    image: repository/jenkins:latest
+    privileged: true
+    user: root
     ports:
-      - "80:80"
+      - 8080:8080
+      - 50000:50000
+    container_name: jenkins
+    volumes:
+      - /root/jenkins:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /usr/local/bin/docker:/usr/local/bin/docker
